# CarbonOps

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
data/: sample-datasets.md
docs/: problem-statement.md
src/carbonops/: cli.py
