[project]
name = "carbonops"
version = "0.0.1"
description = "Carbon-aware DevOps CLI & SDK"
authors = [{name = "FUTUREOPS TECHNOLOGY LTD"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.12.0", "rich>=13.0.0"]

[project.scripts]
carbonops = "carbonops.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
